# DEZOOMCAMP23

./: .gitignore
week_1_basics_n_setup/1_terraform_gcp/my_dir/: GCP_settings.txt
week_1_basics_n_setup/1_terraform_gcp/my_dir/projects/: main.tf  variables.tf
week_1_basics_n_setup/2_docker_sql/: pg-test-connection.ipynb
week_1_basics_n_setup/2_docker_sql/mywork/: Dockerfile  docker-compose.yaml  ingest_data.py  pipeline.py  settings.txt  upload-data.ipynb
week_2_workflow_orchestration/my_work/: etl_parent_flow-deployment.yaml  ingest_data.py  pyproject.toml
week_2_workflow_orchestration/my_work/02_gcp/: etl_GSC_TO_BQ.py  etl_web_to_GCS.py  parametrized_flow.py
