[tool.poetry]
name = "my-work"
version = "0.1.0"
description = ""
authors = ["Roman Slipchuk <roman.slipchuk@gmail.com>"]
readme = "README.md"
packages = [{include = "my_work"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
